--- a/Converter2/app/src/main/res/layout/activity_main.xml
+++ b/Converter2/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context="edu.css.converter.MainActivity">
 
+
     <LinearLayout
         android:id="@+id/inputLayout"
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="How much you got?"
-            android:textAppearance="@android:style/TextAppearance.Holo.Light.Medium"
+            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -31,7 +32,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="numberDecimal"
-            android:text="0.00" />
+            android:text="$0.00"
+            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
 
     </LinearLayout>
 
@@ -76,12 +78,28 @@
             android:text="How you do?"
             android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
 
-        <TextView
+        <EditText
             android:id="@+id/outBills"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAppearance="@android:style/TextAppearance.Holo.Large" />
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:text="$0.00" />
+
     </LinearLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/jsonTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:inputType="textLongMessage" />
+    </GridLayout>
 
 </LinearLayout>
