--- a/Converter2/app/src/main/res/layout/activity_main.xml
+++ b/Converter2/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="numberDecimal"
-            android:text="$0.00"
-            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
+            android:text="0.00" />
 
     </LinearLayout>
 
@@ -85,21 +84,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="numberDecimal"
-            android:text="$0.00" />
+            android:text="0.00" />
 
     </LinearLayout>
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <EditText
-            android:id="@+id/jsonTxt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:inputType="textLongMessage" />
-    </GridLayout>
 
 </LinearLayout>
