--- a/Unit9-2/app/src/main/res/menu/main.xml
+++ b/Unit9-2/app/src/main/res/menu/main.xml
@@ -12,16 +12,18 @@
         android:title="@string/Delete"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/mail"
-        android:icon="@drawable/ic_email_black_24dp"
-        android:title="@string/EMail" />
-    <item
-        android:id="@+id/sms"
-        android:icon="@drawable/ic_sms_black_24dp"
-        android:title="@string/SMS" />
-    <item
         android:id="@+id/setter"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/Settings"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/mail"
+        android:icon="@drawable/ic_email_black_24dp"
+        android:title="@string/EMail"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/sms"
+        android:icon="@drawable/ic_sms_black_24dp"
+        android:title="@string/SMS"
+        app:showAsAction="never" />
 </menu>
